--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,6 @@
     <string name="login_failed">"Login failed"</string>
     <string name="title_chats">Chats</string>
     <string name="title_profile">Profile</string>
+    <string name="attachment_image">Image</string>
+    <string name="attachment_sticker">Sticker</string>
 </resources>
