--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,6 +16,7 @@
     <string name="welcome">"Welcome !"</string>
     <string name="invalid_username">Not a valid username</string>
     <string name="invalid_password">Password must be >5 characters</string>
+    <string name="invalid_confirm_password">Password confirmation does not match the password</string>
     <string name="login_failed">"Login failed"</string>
     <string name="title_chats">Chats</string>
     <string name="title_profile">Profile</string>
