Improved the status panel on ChatFragment.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,7 @@
     <string name="title_profile">Profile</string>
     <string name="attachment_image">Image</string>
     <string name="attachment_sticker">Sticker</string>
+    <string name="chat_status_loading">Connecting...</string>
+    <string name="chat_status_not_loading">Connected</string>
+    <string name="chat_status_error">Connection failed</string>
 </resources>
